[package]
name = "sbi-testing"
version = "0.1.0"
authors = ["YdrMaster <ydrml@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = { git = "https://github.com/rustsbi/sbi-rt.git", rev = "2933f8d" }
riscv = "0.8"
