[package]
name = "sbi-testing"
version = "0.0.0"
edition = "2021"
description = "Provides a set of test cases for supervisors to verify functions of the supervisor executation environment"
categories = ["os", "no-std"]
keywords = ["riscv", "sbi", "rustsbi"]
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rustsbi/sbi-testing"
documentation = "https://docs.rs/sbi-testing"
license = "MulanPSL-2.0 OR MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = "0.0.1"
riscv = "0.8"
log_crate = { version = "0.4.17", package = "log", optional = true }

[features]
log = ["log_crate"]
